# capstone2

./: .gitignore  README.md  project_idead.md  project_ideas.md  project_proposal.md
backend/: .~lock.alexa_formats.csv#  alexa_formats.csv  pyproject.toml
backend/grumpytracker/: conftest.py  manage.py  pytest.ini
backend/grumpytracker/cameras/: admin.py  models.py  seed.py  test_views.py  tests.py  urls.py  views.py
backend/grumpytracker/cameras/migrations/: 0001_initial.py  0002_alter_format_anamorphic_squeeze_and_more.py  0002_camera.py  0002_camera_image.py  0002_remove_source_format_record_format_source.py  0003_camera_sensor_size.py  0003_format.py  0003_format_manufacturer_notes_and_more.py  0004_format_format_name.py  0004_source_file_name.py  0005_alter_format_unique_together.py  0006_format_is_upscaled.py  0007_camera_notes.py  0008_camera_discontinued.py  (+2 more)
backend/grumpytracker/formats/: admin.py  models.py  test_views.py  tests.py  urls.py  views.py
backend/grumpytracker/grumpytracker/: asgi.py  middleware.py  settings.py  settings_test.py  urls.py  utils.py  views.py  wsgi.py
backend/grumpytracker/makes/: admin.py  apps.py  models.py  test_fixtures.py  test_models.py  test_views.py  tests.py  urls.py  views.py
backend/grumpytracker/projects/: admin.py  models.py  seed.py  services.py  test_views.py  tests.py  urls.py  views.py
backend/grumpytracker/sources/: models.py  test_models.py  test_views.py  urls.py  views.py
backend/grumpytracker/users/: admin.py  models.py  seed.py  test_views.py  urls.py  views.py
frontend/: index.html  (+3 more)
(+123 files in other folders)
