[project]
name = "backend"
version = "0.1.0"
description = "Django backend for The Grumpy Tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "parse>=1.20.2",
    "pdfplumber>=0.11.6",
    "psycopg[binary]>=3.2.9",
    "pyjwt>=2.10.1",
    "pymupdf>=1.25.5",
    "python-decouple>=3.8",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
]
